# fricsense-python

./: .gitignore  license.md  pyproject.toml  readme.md
notebooks/: process_data.ipynb
src/fricsense/: __init__.py  command.py  data_processor.py  read_serial.py  ring_buffer.py
